<resources>
    <string name="app_name">QuizApp</string>
    <string name="bottom_quiz">quiz</string>
    <string name="bottom_history">history</string>
    <string name="bottom_settings">settings</string>
    <string name="history">History</string>
    <string name="Quiz">Quiz</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="question_amount">Question amount:</string>
    <string name="_question_amount">0</string>
    <string name="start">Start</string>
    <string name="quiz_category">category</string>
    <string name="progress_amount">0/0</string>
    <string name="skip">Skip</string>
    <string name="quiz_guestion">What is the largest city and commercial capital of Sri Lanka?</string>
    <string name="type_false">No</string>
    <string name="type_true">Yes</string>
    <string name="history_cat">Category: Mixed</string>
    <string name="history_diff">Difficulty: Hard</string>
    <string name="history_ans">Correct answers 0/0</string>
    <string name="history_time">20 may 20/20/2020</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="res_difficulty">Difficulty</string>
    <string name="res_correct_answers">Correct answers</string>
    <string name="result_result">Result</string>
    <string name="result_finish">Finish</string>
    <string name="restult_category_mixed">Category: Mixed</string>
    <string name="result_title">Result</string>
    <string name="res_all">All</string>
    <string name="res_score">0/0</string>
    <string name="res_percent">0%</string>
</resources>
