<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/sfdisplay_bold"
        android:text="@string/result_title"
        android:textColor="@color/colorTitle"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ok_anim"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="125dp"
        app:layout_constraintBottom_toTopOf="@id/results"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/amin_ok" />

    <androidx.cardview.widget.CardView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ok_anim">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="65dp">

            <TextView
                android:id="@+id/result_categ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/sfdisplay_bold"
                android:text="@string/restult_category_mixed"
                android:textColor="@color/colorTitle"
                android:textSize="17sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_diff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/res_difficulty"
                android:fontFamily="@font/sfdisplay_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_categ" />

            <TextView
                android:id="@+id/result_corr_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/res_correct_answers"
                android:fontFamily="@font/sfdisplay_medium"
                app:layout_constraintEnd_toEndOf="@+id/result_categ"
                app:layout_constraintStart_toStartOf="@+id/result_categ"
                app:layout_constraintTop_toBottomOf="@+id/result_categ" />

            <TextView
                android:id="@+id/result_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/result_result"
                android:fontFamily="@font/sfdisplay_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_categ" />

            <TextView
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sfdisplay_bold"
                android:text="@string/res_all"
                android:textColor="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="@+id/result_diff"
                app:layout_constraintStart_toStartOf="@+id/result_diff"
                app:layout_constraintTop_toBottomOf="@+id/result_diff" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sfdisplay_bold"
                android:text="@string/res_score"
                android:textColor="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="@+id/result_corr_ans"
                app:layout_constraintStart_toStartOf="@+id/result_corr_ans"
                app:layout_constraintTop_toBottomOf="@+id/result_corr_ans" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="65dp"
                android:fontFamily="@font/sfdisplay_bold"
                android:text="@string/res_percent"
                android:textColor="@color/colorTitle"
                app:layout_constraintEnd_toEndOf="@+id/result_res"
                app:layout_constraintStart_toStartOf="@+id/result_res"
                app:layout_constraintTop_toBottomOf="@+id/result_res" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/result_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:fontFamily="@font/sfdisplay_bold"
        android:text="@string/result_finish"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:background="@drawable/result_finish_button_style"
        android:clickable="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>