<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_main"
        style="@style/AppTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_marginTop="49dp"
        android:src="@drawable/ic_main_fragment_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_main" />

    <TextView
        android:id="@+id/question_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/sfdisplay_regular"
        android:text="@string/question_amount"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_icon" />

    <TextView
        android:id="@+id/question_amount_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_question_amount"
        app:layout_constraintBottom_toBottomOf="@+id/question_amount_text"
        app:layout_constraintStart_toEndOf="@id/question_amount_text"
        app:layout_constraintTop_toTopOf="@+id/question_amount_text" />

    <SeekBar
        android:id="@+id/amount_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_amount_text" />

    <TextView
        android:id="@+id/title_category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@id/category_spinner"
        app:layout_constraintStart_toStartOf="@id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/amount_seekbar" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        app:layout_constraintBottom_toTopOf="@id/title_difficulty_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_category_spinner" />

    <TextView
        android:id="@+id/title_difficulty_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toTopOf="@id/difficulty_spinner"
        app:layout_constraintStart_toStartOf="@id/difficulty_spinner"
        app:layout_constraintTop_toBottomOf="@id/title_category_spinner" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_difficulty_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>