<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:fontFamily="@font/sfdisplay_regular"
        android:text="@string/quiz_guestion"
        android:textAlignment="center"
        android:textColor="#1A051D"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_title">

        <TextView
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="question1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="question1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="question1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="question1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_title">

        <TextView
            android:id="@+id/question_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="@string/type_true"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/question_false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/quiestion_textview_style"
            android:padding="9dp"
            android:text="@string/type_false"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>