<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/quiz_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:text="@string/quiz_category"
        android:fontFamily="@font/zhimangzing_regular"
        android:textColor="@color/colorTitle"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@+id/quiz_progress"
        app:layout_constraintStart_toStartOf="@+id/quiz_progress"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:src="@drawable/ic_left_black"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/quiz_category" />

    <ProgressBar
        android:id="@+id/quiz_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:max="50"
        android:progress="35"
        android:progressDrawable="@drawable/progress_bar_custom_style"
        app:layout_constraintTop_toBottomOf="@id/quiz_category" />

    <TextView
        android:id="@+id/progress_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/progress_amount"
        android:fontFamily="@font/zhimangzing_regular"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/quiz_progress"
        app:layout_constraintStart_toStartOf="@+id/quiz_progress"
        app:layout_constraintTop_toBottomOf="@+id/quiz_progress" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quiz_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/quiz_skip_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_count" />

    <Button
        style="@style/SkipButton"
        android:id="@+id/quiz_skip_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:fontFamily="@font/zhimangzing_regular"
        android:textSize="21sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/dino_loading"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/anim_dino_dance_loading"
        app:lottie_repeatCount="10" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>